<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CoinDetailActivity">

    <ImageView
        android:id="@+id/ivLogoCoin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        app:layout_constraintEnd_toStartOf="@id/tvSlash"
        app:layout_constraintTop_toTopOf="@id/tvSlash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/slash"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoCoin" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        app:layout_constraintStart_toEndOf="@id/tvSlash"
        app:layout_constraintTop_toTopOf="@id/tvSlash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/tvSlash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/llCurrentPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvPriceLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"

                    android:text="@string/price_label"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="16sp"
                    tools:text="7352.5" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMinPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llCurrentPrice">

                <TextView
                    android:id="@+id/tvMinPriceLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/min_price_label"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvMinPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    tools:text="7110.0" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMaxPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llMinPrice">

                <TextView
                    android:id="@+id/tvMaxPriceLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/max_price_label"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvMaxPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="16sp"
                    tools:text="7820.1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMin24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llMaxPrice">

                <TextView
                    android:id="@+id/tvMin24Label"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/_24_hours_minimum"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvMin24Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    tools:text="7564.1" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMax24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llMin24">

                <TextView
                    android:id="@+id/tvMax24Label"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/_24_hours_maximum"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvMax24Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="16sp"
                    tools:text="7820.1" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMinHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llMax24">

                <TextView
                    android:id="@+id/tvMinHourLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/last_hour_minimum"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvMinHourPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    tools:text="7564.1" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMaxHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llMinHour">

                <TextView
                    android:id="@+id/tvMaxHourLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/last_hour_maximum"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvMaxHourPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="16sp"
                    tools:text="7820.1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLastDeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llMaxHour">

                <TextView
                    android:id="@+id/tvLastMarketLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/last_market_label"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvLastMarket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="16sp"
                    tools:text="Bitfinex" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llLastDeal">

                <TextView
                    android:id="@+id/tvLastUpdateLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated_label"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvLastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="16sp"
                    tools:text="21:05:16" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
